[gd_scene load_steps=4 format=3 uid="uid://c5u6hi0fxgwig"]

[ext_resource type="PackedScene" uid="uid://cywe4dkniuoq8" path="res://world_elements/platforms/platform.tscn" id="1_w8u5s"]
[ext_resource type="Script" path="res://world_elements/platforms/path_platform.gd" id="2_o62ek"]

[sub_resource type="BoxShape3D" id="BoxShape3D_y7661"]
size = Vector3(1, 0.345795, 1)

[node name="path platform" instance=ExtResource("1_w8u5s")]
script = ExtResource("2_o62ek")

[node name="platform" parent="." index="1"]
collision_mask = 3

[node name="Area3D" type="Area3D" parent="platform" index="1"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="platform/Area3D" index="0"]
transform = Transform3D(38.9757, 0, 0, 0, 0.263022, 0, 0, 0, 38.4122, 0, 0.137101, 0)
shape = SubResource("BoxShape3D_y7661")

[node name="Detach Timer" type="Timer" parent="." index="2"]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="platform/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="platform/Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Detach Timer" to="." method="_on_detach_timer_timeout"]
